--- a/arArchivesOrPlugin/css/less/homepage.less
+++ b/arArchivesOrPlugin/css/less/homepage.less
@@ -287,7 +287,7 @@
     height: 500px;
 }
 #slide4 {
-    background-image: url(http://172.30.200.90/uploads/r/oregon-historical-society-library/4/f/1/4f15921edffca3252376b80cfb9928864eaffbb91ac41a59ff6132f1309e7a58/49e051a2-7d1c-42b1-82a8-cd8733d97a1e-369N0005.jpg);
+    background-image: url(http://68.media.tumblr.com/91364852ae66cb41d116c86f025e4545/tumblr_ogsyv6CSCl1sy1cyao1_1280.jpg);
     background-repeat: no-repeat;
     background-position: 0 20%;
     background-size: cover;
