First draft of Jay's OHS-branded version; includes changes discussed 3/8/17.

--- a/arArchivesOrPlugin/css/less/variables.less
+++ b/arArchivesOrPlugin/css/less/variables.less
@@ -37,7 +37,7 @@
 
 // Accent colors
 // -------------------------
-@blue:                  #049cdb;
+@blue:                  #bf3f27;
 @blueDark:              #0064cd;
 @green:                 #46a546;
 @red:                   #9d261d;
@@ -55,22 +55,22 @@
 
 // Links
 // -------------------------
-@linkColor:             #08c;
-@linkColorHover:        darken(@linkColor, 15%);
+@linkColor:             #bf3f27;
+@linkColorHover:        #721f13;
 
 
 // Typography
 // -------------------------
 
-@sansFontFamily:        "Open Sans Regular", "Helvetica Neue", Helvetica, Arial, sans-serif;
-@serifFontFamily:       "Droid Sans Serif", Georgia, "Times New Roman", Times, serif;
+@sansFontFamily:        "proxima-nova","Helvetica Neue","Helvetica",Helvetica,Arial,sans-serif;
+@serifFontFamily:       "proxima-nova","Helvetica Neue","Helvetica",Helvetica,Arial,sans-serif;
 @monoFontFamily:        Monaco, Menlo, Consolas, "Courier New", monospace;
 
-@sansBoldFontFamily:    "Open Sans Semibold", "Open Sans Regular", "Helvetica Neue", Helvetica, Arial, sans-serif;
+@sansBoldFontFamily:    "raleway","Helvetica Neue",Helvetica,Arial,sans-serif;
 
-@baseFontSize:          13px;
+@baseFontSize:          15px;
 @baseFontFamily:        @sansFontFamily;
-@baseLineHeight:        20px;
+@baseLineHeight:        1.3;
 @altFontFamily:         @serifFontFamily;
 
 @headingsFontFamily:    inherit; // empty to use BS default, @baseFontFamily
