--- a/arArchivesOrPlugin/css/less/header.less
+++ b/arArchivesOrPlugin/css/less/header.less
@@ -31,7 +31,7 @@
  
  #header {
   height: 118px;
-  border-bottom: 3px solid rgb(247,206,60); 
+  /*border-bottom: 3px solid rgb(247,206,60);*/ 
   background-color: rgb(0,45,70);
 }
 
@@ -76,6 +76,8 @@
 
 #logo-and-name h1 {
 	.pull-left();
+  line-height: inherit;
+  font-size: 22px;	
   margin-left: 10px;
   margin-top: -30px;
 }
