--- a/arArchivesOrPlugin/css/less/homepage.less
+++ b/arArchivesOrPlugin/css/less/homepage.less
@@ -37,6 +37,7 @@
   h2 {
     font-size: 20px;
     font-style: normal;
+	margin-top: 0px;
     margin-bottom: 5px;
   }
 	h3 {
@@ -61,42 +62,71 @@
 
   font-family: @serifFontFamily;
   .pull-left();
+  background-color: rgb(0,45,70);
+  width: 300px;
+  margin-left: 0px;
+  margin-top: 28px;
 
+
+  h2,
   p {
-    font-size: 20px;
-	margin-bottom: 0px;
-	padding: 10px 10px 10px 10px;
-	background-color: rgb(0,45,70);
-  }
+	padding-left: 0;
+	margin-top: 1.25em;
+    margin-left: 1.25em;
+	color: #fff;
+	  }
 
   ul {
     .nav();
-	background-color: rgb(0,45,70);
-	padding: 10px 10px 10px 10px;
-	
+
+    float: none;
+    max-width: 16.625em;
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1.25em;
+    padding-top: 1.25em;
+    text-align: center;
+
   }
 
   li {
+  
+  	  float: none;
+   	  position: relative;
+      
+	  
     
 	.clearfix();
 	&:hover {
       background-color: rgb(48,71,89);
 	  color: rgb(3,181,181);
+	  
 	}
 	
 	a {
-    font-size: 15px;
-	font-family: @sansFontFamily;
-	color: @white;
+    font-size: 14px;
+//	font-family: @sansFontFamily;
+	color: #d7dfdf;
     display: block;
-    padding: 3px 8px 3px 8px;
-	border-bottom: 1px solid @white;
-    .text-overflow();
+	text-decoration: none;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    padding: 1.25em 1.25em 1.25em 1.25em;
+	border-top: 1px solid #d7dfdf;
+	-webkit-transition:padding-left 300ms ease-in-out,padding-right 300ms ease-in-out,padding-top 300ms ease-in-out,font-size 300ms ease-in-out;
+	transition:padding-left 300ms ease-in-out,padding-right 300ms ease-in-out,padding-top 300ms ease-in-out,font-size 300ms ease-in-out;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing:grayscale;
+	.text-overflow();
     &:hover {
       background-color: rgb(48,71,89);
 	  color: rgb(3,181,181);
+	  text-decoration: none;
     }
 	}
+	
 	
     img {
       margin-right: 10px;
@@ -110,34 +140,58 @@
 #intro {
 	
 	.pull-right(); 
-	padding: 75px 10px 10px 10px;
+	padding: 7% 0px 10px 10px;
 	
 	div {
 		display: block;
 		height: 500px;
 	}
 	
-	h2 {
+	h3 {
 		color: @black;
 		background-color: rgb(247,206,60);
 		margin-bottom: 0px;
-		padding: 24px 36px 10px 36px;
+		padding: 36px 48px 0px 48px;
+		font-size: 24px;
+    	margin-top: 0px;
 		
 	}
 	
 	p {
 		color: @black;
 		background-color: rgb(247,206,60);
-		padding: 10px 36px 24px 36px;
+		padding: 8px 48px 48px 48px;
+		font-size: 16px;
+		line-height: 1.5;
+    	margin-top: 0px;
 	}
 }
 
+#welcome-message__inner {
+    width: 66.6666666667%;
+//  float: right;
+    padding-left: 30%;
+    padding-right: 2.380952381%;
+}
 
+
+#welcome-message {
+    padding-left: 1.75em;
+    margin: 0;
+    position: inherit;
+    top: 50%;
+    margin-top: 4em;
+    margin-right: 10%;
+    font-size: 3.25em;
+    color: #fff;
+    line-height: 1;
+    font-family: "raleway","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
 
 
 #homepage {
 
-  margin-top: 30px;
+  margin-top: 10px;
 
   * {
     .box-sizing(border-box);
@@ -159,6 +213,9 @@
     margin-right: 10px;
   }
 
+  ul{
+  	margin: 0 0 0 1em;	
+  }
 }
 
 // Virtual exhibits
@@ -447,6 +504,8 @@ h3 {
 
 }
 
+
+
 // Responsive design
 
 @media (max-width: 767px) {
@@ -486,6 +545,7 @@ h3 {
     a {
       padding: 6px 8px;
       display: block;
+	  text-decoration: none;
     }
 
   }
@@ -523,4 +583,23 @@ h3 {
     background-color: rgba(0, 0, 0, .25);
   }
 
+}
+
+#cta {
+
+	min-height: 21.4em;
+	background-color: #d7dfdf;
+    padding: 3.5em 3.5em 1em;
+	// margin-left: 20px;
+	
+	h1 {
+		margin-bottom: 0;
+    	margin-top: -0.17em;
+    	font-size: 3em;
+    	line-height: 1.1;	
+	}
+}
+
+#logo-and-name h1 {
+    margin-left: 0px;
 }
