--- a/arArchivesOrPlugin/css/less/homepage.less
+++ b/arArchivesOrPlugin/css/less/homepage.less
@@ -268,6 +268,7 @@
 
   a h3 {
     min-height: 84px;
+	margin-top: 10px;
   }
 
   a h3,
@@ -296,6 +297,7 @@
     @white: rgba(255, 255, 255, .4);
     border: 12px solid @white;
     color: @white;
+	line-height: .2;
   }
 }
 
@@ -359,6 +361,7 @@ h3 {
     width: 100%;
 	min-height: 84px;
     padding: 8px;
+	margin-top: 10px;
 	margin-bottom: 4px;
     background-color: #000;
     background-color: rgba(0, 0, 0, .6);
