--- a/arArchivesOrPlugin/css/less/main.less
+++ b/arArchivesOrPlugin/css/less/main.less
@@ -43,6 +43,10 @@ h2 {
   font-weight: bold;
   line-height: 1.3;
   text-decoration: none;
+  font-variant-numeric: lining-nums;
+  -moz-font-feature-settings: "lnum";
+  -webkit-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 h3, 
 h4 {
@@ -200,6 +204,7 @@ th {
 }
 
 #identifyArea h2,
+#elementsArea h2,
 #identityArea h2 {
   font-size: 16px;
   border-bottom: 1px solid #f2f2f2;
@@ -214,6 +219,7 @@ th {
 #contactArea h2,
 #accessArea h2,
 #notesArea h2,
+#acquisitionAndAppraisalArea h2,
 #conditionsOfAccessAndUseArea h2,
 #controlArea h2,
 #descriptionControlArea h2,
@@ -229,7 +235,10 @@ th {
 }
 
 .digitalObjectMetadata {
+  font-size: 16px;
   border-top: 1px solid #f2f2f2;
+  margin: 0;
+  padding: 0px 0px;
 }
 
 #content .field > h3 {
