Attempt to fix digital object metadata h2 formatting issue without messing with how atom marks up the page.

--- a/arArchivesOrPlugin/css/less/main.less
+++ b/arArchivesOrPlugin/css/less/main.less
@@ -115,6 +115,15 @@ h6 {
   p {
   	margin: 10px 0 10px 0;
   }
+  
+	section h2:last-child {
+	  font-size: 16px;
+	  border-top: 1px solid #f2f2f2;
+	  border-bottom: 1px solid #f2f2f2;
+	  margin: 0;
+	  padding: 10px 10px;	
+	}
+  
 }
 
 h1 { font-size: 24px; }
@@ -234,12 +243,13 @@ th {
   padding: 10px 10px;	
 }
 
-.digitalObjectMetadata {
-  font-size: 16px;
-  border-top: 1px solid #f2f2f2;
-  margin: 0;
-  padding: 0px 0px;
-}
+// .digitalObjectMetadata {
+//   font-size: 16px;
+//   border-top: 1px solid #f2f2f2;
+//   margin: 0;
+//   padding: 0px 0px;
+// }
+
 
 #content .field > h3 {
     float: left;
