--- a/arArchivesOrPlugin/css/less/homepage.less
+++ b/arArchivesOrPlugin/css/less/homepage.less
@@ -511,6 +511,20 @@ h3 {
 
 // Responsive design
 
+
+@media (max-width: 520px) {
+  #homepage-nav {
+  	width: 100%;
+  }
+}
+
+@media (min-width: 521px) and (max-width: 767px) {
+  #homepage-nav {
+	width: 65%;
+    margin-left: 18%;
+  }
+}
+
 @media (max-width: 767px) {
 
   #homepage {
@@ -527,13 +541,14 @@ h3 {
 
     background: none;
     padding-top: 20px;
+	padding-bottom: 0px;
 
   }
 
   #homepage-nav {
 
     ul {
-      background-color: rgba(50, 50, 50, .3);
+      // background-color: rgba(50, 50, 50, .3);
       .border-radius(4px);
     }
 
@@ -556,49 +571,102 @@ h3 {
   #intro {
     .hide();
   }
-
+  
+  #cta {
+  	margin-top: 30px;
+  	// padding: 3.5em 20% 1em;
+  	h1 {
+	  font-size: 2.75em
+  	}
+  }	
+  
+  #context-menu a {
+  	border: none;
+  }
+  
+  button.clipboard-wide {
+    font-size: 18px;
+	padding: 5px 7px 4px 24px;
+  }
+  
+  
 }
 
 @media (min-width: 980px) and (max-width: 1199px) {
 
-  #intro p {
-    font-size: 13px;
-  }
-
+  #intro {
+  	p {
+      font-size: 15px;
+    }
+    h3 {
+      font-size: 21px;
+      }
+	}
 }
 
 @media (max-width: 979px) {
 
   #intro {
     p {
-      margin-top: 8px;
-      font-size: 11px;
+      // margin-top: 8px;
+      font-size: 13px;
     }
-    h2 {
-      margin-top: 0;
-      .title {
+    h3 {
+      // margin-top: 0;
         font-size: 18px;
       }
-    }
-    margin-top: -40px;
-    margin-right: -2px;
-    padding: 20px;
-    background-color: rgba(0, 0, 0, .25);
+    // margin-top: -40px;
+    // margin-right: -2px;
+    // padding: 20px;
+    // background-color: rgba(0, 0, 0, .25);
+	// width: 40%;
+  }
+  
+  #welcome-message__inner {
+    width: 80%;
+    padding-left: 35%;
+    padding-right: 2.38095238%;
+  } 
+  
+  #homepage-hero h1 {
+    font-size: 45px;
+  }
+  
+}
+
+@media (max-width: 979px) and (min-width: 768px) {
+
+  .span4 {
+	width: 268px;
+  }
+  
+  .span7 {
+    width: 416px;
+  }
+
+  .span8 {
+    width: 436px;
+  }
+  
+  #cta h1 {
+  	font-size: 2.75em
   }
 
 }
+
+//ohs cta
 
 #cta {
 
 	min-height: 21.4em;
 	background-color: #d7dfdf;
-    padding: 3.5em 3.5em 1em;
+    padding: 3.5em 15% 1em;
 	// margin-left: 20px;
 	
 	h1 {
 		margin-bottom: 0;
     	margin-top: -0.17em;
-    	font-size: 3em;
+    	// font-size: 3em;
     	line-height: 1.1;	
 	}
 }
