--- a/arArchivesOrPlugin/css/less/main.less
+++ b/arArchivesOrPlugin/css/less/main.less
@@ -123,6 +123,14 @@ h6 {
 	  margin: 0;
 	  padding: 10px 10px;	
 	}
+ 
+ ul {
+ 	margin: 10px 0 10px 0;	
+ 	}
+  
+ .field {
+    margin-right: 8px;
+	} 
   
 }
 
