--- a/arArchivesOrPlugin/css/less/homepage.less
+++ b/arArchivesOrPlugin/css/less/homepage.less
@@ -278,7 +278,7 @@
     height: 500px;
 }
 #slide3 {
-    background-image: url("/plugins/arArchivesOrPlugin/images/slide3.PNG");
+    background-image: url("/plugins/arArchivesOrPlugin/images/slide3.jpg");
     background-repeat: no-repeat;
     background-position: 0 50%;
     background-size: cover;
