Remove underline on hover for next/prev slideshow arrows

--- a/arArchivesOrPlugin/css/less/homepage.less
+++ b/arArchivesOrPlugin/css/less/homepage.less
@@ -414,7 +414,9 @@ h3 {
 /* On hover, swap colors */
 .prev:hover, .next:hover {
   background-color: rgb(48,71,89);
-	  color: rgb(3,181,181);
+  color: rgb(3,181,181);
+  /* DON'T underline */
+  text-decoration: none;  
 }
 
 /* The dots/bullets/indicators */
