--- a/arArchivesOrPlugin/css/less/footer.less
+++ b/arArchivesOrPlugin/css/less/footer.less
@@ -156,7 +156,7 @@
     display: block;
     width: 100%;
     height: 100%;
-    float: right;
+    float: inherit;
     padding: 1em;
     background: transparent;
     border: 2px solid #d8dede;
