Newest Additions test

--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -467,8 +467,35 @@ h3 {
 
 // NewestAdditions
 
-/* #newest-additions {
+#newest-additions {
+margin-top: 10px;
 
+* {
+  .box-sizing(border-box);
+}
+
+h3 {
+  color: @white;
+  line-height: 110%;
+  margin-bottom: 10px;
+}
+
+h3 span {
+  font-style: oblique;
+}
+
+p,
+li {
+  margin-bottom: 5px;
+  margin-right: 10px;
+}
+
+ul{
+  margin: 0 0 0 1em;
+}
+}
+
+/*
   color: @white;
   padding: 3px 14px 8px 14px;
   background-color: rgb(0,45,70);
