added partner sites row to homepage

--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -287,7 +287,7 @@
   }
 
   a:hover div:after {
-    content: "›"; // "»";
+    content: "›";
     position: absolute;
     font-size: 128px;
     bottom: 50px;
@@ -465,8 +465,19 @@ h3 {
 }
 }
 
+//partner-sites
+.partner-sites {
+  position: relative;
+  margin-top: 0px;
+  width: 100%;
+  display: block;
+  height: 500px;
+}
 
-
+.partner-site {
+  text-align: center;
+  color: #FFF
+}
 
 
 // Responsive design
