--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -466,12 +466,12 @@ h3 {
 }
 
 //partner-sites
-.partner-sites {
-  position: relative;
-  margin-top: 0px;
-  width: 100%;
-  display: block;
-  height: 500px;
+#partner-sites {
+  margin-top: 30px;
+  }
+
+.partner-site__hed{
+margin-bottom: 10px;
 }
 
 .partner-site {
