--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -468,7 +468,7 @@ h3 {
 //partner-sites
 #partner-sites {
   margin-top: 30px;
-  }
+
 
 .partner-site__hed{
 margin-bottom: 10px;
@@ -476,9 +476,9 @@ margin-bottom: 10px;
 
 .partner-site {
   text-align: center;
-  color: #FFF
+  color: #FFF;
 }
-
+}
 
 // Responsive design
 
