--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -468,12 +468,15 @@ h3 {
 //partner-sites
 #partner-sites {
   margin-top: 30px;
-
+  width: 100%;
 
 .partner-site__hed{
-margin-bottom: 10px;
+  margin-bottom: 10px;
 }
-
+.partner-sites__grid{
+  display: block;
+  padding: 0;
+}
 .partner-site {
   text-align: center;
   color: #FFF;
