--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -406,6 +406,7 @@ h3 {
 }
 
 /* Position the "next button" to the right */
+
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
@@ -466,25 +467,221 @@ h3 {
 }
 
 //partner-sites
-#partner-sites {
-  margin-top: 30px;
-  width: 100%;
 
-.partner-site__hed{
-  margin-bottom: 10px;
+.partner-sites{
+  width:100%;
+  padding:2.375em 2.875em 3.4375em;
+  padding-bottom:0
+}
+
+.home.partner-sites{
+  padding:3em 3.5em 4.0625em
+}
+
+@media (max-width: 950px){
+  .partner-sites{
+    padding:2.375em 2.875em 3.4375em
+}
+  .home.partner-sites{
+    padding:2.375em 2.875em 3.4375em
+  }
+}
+@media (max-width: 767px){
+  .partner-sites{
+    padding:2.375em 2.5625em 3.4375em
+  }
+  .home.partner-sites{
+    padding:2.375em 2.5625em 3.4375em
+  }
+}
+@media (max-width: 550px){
+  .partner-sites{
+    padding:0
+  }
+}
+.partner-sites__hed{
+  font-size:2em
+}
+@media (max-width:550px){
+  .partner-sites__hed{
+    max-width:320px;
+    margin-left:auto;
+    margin-right:auto
+  }
 }
 .partner-sites__grid{
-  display: block;
-  padding: 0;
+  display:block;
+  padding:2.375em 2.875em 3.4375em;
+  padding-bottom:0 !important;
+  padding-top:0 !important
 }
-.partner-site {
-  text-align: center;
-  color: #FFF;
+
+.partner-sites__grid:before{
+  content:" ";
+  display:table
 }
+.partner-sites__grid:after{
+  content:" ";
+  display:table;
+  clear:both
+}
+.home.partner-sites__grid{
+  padding:3em 3.5em 4.0625em
+}
+@media (max-width: 950px){
+  .partner-sites__grid{
+    padding:2.375em 2.875em 3.4375em
+  }
+  .home.partner-sites__grid{
+    padding:2.375em 2.875em 3.4375em
+    }
+  }
+@media (max-width: 767px){
+  .partner-sites__grid{
+    padding:2.375em 2.5625em 3.4375em
+  }
+  .home .partner-sites__grid{
+    padding:2.375em 2.5625em 3.4375em
+    }
+  }
+@media (max-width: 650px){
+  .partner-sites__grid{
+    padding-left:0 !important;
+    padding-right:0 !important
+  }
+}
+@media (max-width:550px){
+  .partner-sites__grid{
+    max-width:320px;
+    margin:0 auto
+    }
+  }
+.partner-site{
+  width:33.3333333333%;
+  height:0;
+  padding-bottom:33.3333333333%;
+  float:left;
+  text-align:center;
+  position:relative;
+  color:#fff;
+  overflow:hidden;
+  border-right:3px solid #fff
+}
+.partner-site:last-child{
+    border-right:0
+  }
+    .lt-ie9.partner-site+.partner-site+.partner-site{
+      border-right:0
+    }
+  .no-touch.partner-site:hover
+  .partner-site--more-link{
+        color:#f0d23f
+        }
+  .no-touch.partner-site:hover
+  .partner-site__img {
+    -webkit-transform:scale3d (1.1, 1.1, 1)
+    rotate(0.02deg);
+    transform:scale3d(1.1, 1.1, 1) rotate(0.02deg)
+}
+@media (max-width:550px){
+  .partner-site{
+    width:100%;
+    padding-bottom:83.3333333333%;
+    border-right:0;
+    border-bottom:2px solid#fff
+    }
+    .partner-site:last-child{
+      border-bottom:0
+  }
+}
+.partner-site__img{
+  position:absolute;
+  top:0;
+  right:0;
+  left:0;
+  bottom:0;
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-position:center;
+  -webkit-transform:scale3d(1, 1, 1) rotate(0);
+  transform:scale3d(1, 1, 1) rotate(0);
+  -webkit-transition:all 200ms ease-in-out;
+  transition:all 200ms ease-in-out
+  }
+  .lt-ie9.partner-site__img{
+    -ms-behavior:url(/js/backgroundsize.min.htc)
+    }
+    .partner-site__img:after{
+      content:'';
+      display:block;
+      position:absolute;
+      top:0;
+      right:0;
+      left:0;
+      bottom:0;
+      background-color:rgba(35,44,50,0.8)
+      }
+    .lt-ie9 .partner-site__img:after{
+      background:transparent url(img/ohs-blue-60.png) repeat
+    }
+.partner-site__text-holder {
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0
+}
+.partner-site__text-holder:before {
+  content:'';
+  display:inline-block;
+  height:100%;
+  vertical-align:middle;
+  margin-right:-0.3em
+}
+.partner-site__text {
+  display:inline-block;
+  vertical-align:middle;
+  padding:1.25em
+}
+@media (max-width: 767px) {
+  .partner-site__text{
+    padding:0.9375em
+    }
+  }
+@media (max-width: 650px) {
+  .partner-site__text {
+    padding:0.625em
+  }
+}
+
+@media (max-width: 550px) {
+  .partner-site__text{
+    padding:3.4375em
+ }
+}
+.partner-site__hed {
+  position:relative;
+  margin:0;
+  font-size:1.5em
+}
+
+@media (max-width: 767px) {
+  .partner-site__hed {
+    font-size:1.25em;
+  }
+}
+@media (max-width: 550px) {
+  .partner-site__hed {
+    font-size:1.5em;
+  }
+}
+.partner-site--more-link {
+  position:relative;
+  color:#0db7b8;
+  font-weight:bold;
 }
 
 // Responsive design
-
 
 @media (max-width: 520px) {
   #homepage-nav {
