--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -575,13 +575,12 @@ h3 {
     }
   .no-touch.partner-site:hover
   .partner-site--more-link{
-        color:#f0d23f
+        color:#f0d23f;
         }
   .no-touch.partner-site:hover
   .partner-site__img {
-    -webkit-transform:scale3d (1.1, 1.1, 1)
-    rotate(0.02deg);
-    transform:scale3d(1.1, 1.1, 1) rotate(0.02deg)
+    -webkit-transform: scale3d(1.1, 1.1, 1) rotate(0.02deg);
+    transform: scale3d(1.1, 1.1, 1) rotate(0.02deg);
 }
 @media (max-width:550px){
   .partner-site{
@@ -600,11 +599,11 @@ h3 {
   right:0;
   left:0;
   bottom:0;
-  background-repeat:no-repeat;
-  background-size:cover;
-  background-position:center;
-  -webkit-transform:scale3d(1, 1, 1) rotate(0);
-  transform:scale3d(1, 1, 1) rotate(0);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  -webkit-transform: scale3d(1, 1, 1) rotate(0);
+  transform: scale3d(1, 1, 1) rotate(0);
   -webkit-transition:all 200ms ease-in-out;
   transition:all 200ms ease-in-out
   }
