--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -468,11 +468,11 @@ h3 {
 
 //partner-sites
 
-.partner-sites{
+#partner-sites{
   width:100%;
   padding: 2.375em 2.875em 3.4375em;
   padding-bottom:0;
-}
+
 
 .partner-sites__hed{
   font-size:2em;
@@ -487,7 +487,7 @@ h3 {
 
 .partner-sites__grid:before{
   content: " ";
-  display: table
+  display: table;
 }
 .partner-sites__grid:after{
   content: " ";
@@ -571,13 +571,14 @@ h3 {
 .partner-site__hed {
   position:relative;
   margin:0;
-  font-size:1.5em
+  font-size:1.5em;
 }
 
 .partner-site--more-link {
   position:relative;
   color:#0db7b8;
   font-weight:bold;
+}
 }
 
 // Responsive design
