--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -495,7 +495,29 @@ h3 {
   clear: both;
 }
 
-.partner-site{
+#partner-site1 {
+  width: 33.3333333333%;
+  height: 0;
+  padding-bottom: 33.3333333333%;
+  float: left;
+  text-align: center;
+  position: relative;
+  color: #fff;
+  overflow: hidden;
+  border-right: 3px solid #fff;
+}
+#partner-site2 {
+  width: 33.3333333333%;
+  height: 0;
+  padding-bottom: 33.3333333333%;
+  float: left;
+  text-align: center;
+  position: relative;
+  color: #fff;
+  overflow: hidden;
+  border-right: 3px solid #fff;
+}
+#partner-site3 {
   width: 33.3333333333%;
   height: 0;
   padding-bottom: 33.3333333333%;
