--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -468,12 +468,6 @@ h3 {
 
 //partner-sites
 
-.partner-sites {
-  padding: 3em 3.5em 4.0625em;
-}
-.partner-sites__grid {
-  padding: 3em 3.5em 4.0625em;
-}
 .partner-site+.partner-site+.partner-site {
   border-right: 0;
 }
@@ -494,7 +488,7 @@ h3 {
     }
   }
 }
-.partner-sites {
+#partner-sites {
 	width: 100%;
 	padding: 2.375em 2.875em 3.4375em;
 	padding-bottom: 0;
