--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -471,13 +471,13 @@ h3 {
 .partner-site+.partner-site+.partner-site {
   border-right: 0;
 }
-.partner-site__img {
+#partner-site__img {
   -ms-behavior: url(/js/backgroundsize.min.htc);
   &:after {
     background: transparent url(img/ohs-blue-60.png) repeat;
   }
 }
-.partner-site {
+#partner-site {
   &:hover {
     .partner-site--more-link {
       color: #f0d23f;
@@ -493,10 +493,10 @@ h3 {
 	padding: 2.375em 2.875em 3.4375em;
 	padding-bottom: 0;
 }
-.partner-sites__hed {
+#partner-sites__hed {
 	font-size: 2em;
 }
-.partner-sites__grid {
+#partner-sites__grid {
 	display: block;
 	padding: 2.375em 2.875em 3.4375em;
 	padding-bottom: 0 !important;
@@ -511,7 +511,7 @@ h3 {
 		clear: both;
 	}
 }
-.partner-site {
+#partner-site {
 	width: 33.3333333333%;
 	height: 0;
 	padding-bottom: 33.3333333333%;
@@ -525,7 +525,7 @@ h3 {
 		border-right: 0;
 	}
 }
-.partner-site__img {
+#partner-site__img {
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -549,7 +549,7 @@ h3 {
 		background-color: rgba(35,44,50,0.8);
 	}
 }
-.partner-site__text-holder {
+#partner-site__text-holder {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -563,17 +563,17 @@ h3 {
 		margin-right: -0.3em;
 	}
 }
-.partner-site__text {
+#partner-site__text {
 	display: inline-block;
 	vertical-align: middle;
 	padding: 1.25em;
 }
-.partner-site__hed {
+#partner-site__hed {
 	position: relative;
 	margin: 0;
 	font-size: 1.5em;
 }
-.partner-site--more-link {
+#partner-site--more-link {
 	position: relative;
 	color: #0db7b8;
 	font-weight: bold;
