--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -467,7 +467,7 @@ h3 {
 }
 
 //partner-sites
-
+/*
 .partner-site+.partner-site+.partner-site {
   border-right: 0;
 }
@@ -578,7 +578,7 @@ h3 {
 	color: #0db7b8;
 	font-weight: bold;
 }
-
+*/
 // Responsive design
 
 @media (max-width: 520px) {
