--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -468,7 +468,7 @@ h3 {
 
 //partner-sites
 
-.partner-site+.partner-site+.partner-site {
+#partner-site, #partner-site, #partner-site {
   border-right: 0;
 }
 #partner-site__img {
