--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -468,7 +468,7 @@ h3 {
 
 //partner-sites
 
-.partner-sites {
+#partner-sites {
 	width: 100%;
 	padding: 2.375em 2.875em 3.4375em;
 	padding-bottom: 0;
@@ -491,7 +491,7 @@ h3 {
 		clear: both;
 	}
 }
-.partner-site {
+#partner-site {
 	width: 33.3333333333%;
 	height: 0;
 	padding-bottom: 33.3333333333%;
