--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -468,17 +468,17 @@ h3 {
 
 //partner-sites
 
-#partner-sites {
+.partner-sites {
 	width: 100%;
-	padding: 2.375em 2.875em 3.4375em;
+	padding: 5px 4px 5px;
 	padding-bottom: 0;
 }
 .partner-sites__hed {
-	font-size: 2em;
+	font-size: 4px;
 }
 .partner-sites__grid {
 	display: block;
-	padding: 2.375em 2.875em 3.4375em;
+	padding: 4px 5px 4px;
 	padding-bottom: 0 !important;
 	padding-top: 0 !important;
 	&:before {
@@ -491,7 +491,7 @@ h3 {
 		clear: both;
 	}
 }
-#partner-site {
+.partner-site {
 	width: 33.3333333333%;
 	height: 0;
 	padding-bottom: 33.3333333333%;
@@ -551,7 +551,7 @@ h3 {
 .partner-site__hed {
 	position: relative;
 	margin: 0;
-	font-size: 1.5em;
+	font-size: 14pt;
 }
 .partner-site--more-link {
 	position: relative;
