--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -473,9 +473,7 @@ h3 {
 	padding: 5px 4px 5px;
 	padding-bottom: 0;
 }
-.partner-sites__hed {
-	font-size: 4px;
-}
+
 .partner-sites__grid {
 	display: block;
 	padding: 4px 5px 4px;
@@ -540,13 +538,13 @@ h3 {
 		display: inline-block;
 		height: 100%;
 		vertical-align: middle;
-		margin-right: -0.3em;
+		margin-right: 1px;
 	}
 }
 .partner-site__text {
 	display: inline-block;
 	vertical-align: middle;
-	padding: 1.25em;
+	padding: 12pt;
 }
 .partner-site__hed {
 	position: relative;
