--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -481,11 +481,11 @@ h3 {
 	padding-top: 0 !important;
 	&:before {
 		content: " ";
-		display: table;
+    display: table-row;
 	}
 	&:after {
 		content: " ";
-		display: table;
+		display: table-row;
 		clear: both;
 	}
 }
