--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -489,6 +489,10 @@ h3 {
 		clear: both;
 	}
 }
+.partner-site, .partner-site, .partner-site {
+  border-right: 0;
+}
+
 .partner-site {
 	width: 33.3333333333%;
 	height: 0;
