--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -477,8 +477,9 @@ h3 {
 .partner-sites__grid {
 	display: block;
 	padding: 4px 5px 4px;
-	padding-bottom: 0 !important;
-	padding-top: 0 !important;
+	padding-bottom: 0;
+	padding-top: 0;
+}
 	&:before {
 		content: " ";
     display: table-row;
@@ -488,7 +489,7 @@ h3 {
 		display: table-row;
 		clear: both;
 	}
-}
+
 .partner-site, .partner-site, .partner-site {
   border-right: 0;
 }
@@ -503,10 +504,11 @@ h3 {
 	color: #fff;
 	overflow: hidden;
 	border-right: 3px solid #fff;
+}
 	&:last-child {
 		border-right: 0;
 	}
-}
+
 .partner-site__img {
 	position: absolute;
 	top: 0;
@@ -520,6 +522,7 @@ h3 {
 	transform: scale3d(1, 1, 1) rotate(0);
 	-webkit-transition: all 200ms ease-in-out;
 	transition: all 200ms ease-in-out;
+}
 	&:after {
 		content: '';
 		display: block;
@@ -530,13 +533,14 @@ h3 {
 		bottom: 0;
 		background-color: rgba(35,44,50,0.8);
 	}
-}
+
 .partner-site__text-holder {
 	position: absolute;
 	top: 0;
 	left: 0;
 	right: 0;
 	bottom: 0;
+}
 	&:before {
 		content: '';
 		display: inline-block;
@@ -544,7 +548,7 @@ h3 {
 		vertical-align: middle;
 		margin-right: 1px;
 	}
-}
+
 .partner-site__text {
 	display: inline-block;
 	vertical-align: middle;
