--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -466,6 +466,13 @@ h3 {
 }
 // Boxes
 /* The grid: Three equal columns that floats next to each other */
+#partner-sites {
+  margin-top: 30px;
+
+  * {
+    .box-sizing(border-box);
+  }
+
 .column {
     float: left;
     width: 33.33%;
@@ -495,7 +502,7 @@ h3 {
     font-size: 35px;
     cursor: pointer;
 }
-
+}
 // NewestAdditions
 
 #newest-additions {
