--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -467,11 +467,14 @@ h3 {
 // Boxes
 /* The grid: Three equal columns that floats next to each other */
 #partner-sites {
-  margin-top: 30px;
 
-  * {
-    .box-sizing(border-box);
-  }
+.container {
+  position: relative;
+  margin-top: 0px;
+  width: 100%;
+  display: block;
+  height: 500px;
+}
 
 .column {
     float: left;
@@ -490,7 +493,7 @@ h3 {
 
 /* Clear floats after the columns */
 .row:after {
-    content: "";
+    content: " ";
     display: table;
     clear: both;
 }
