--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -467,7 +467,9 @@ h3 {
 // Boxes
 /* The grid: Three equal columns that floats next to each other */
 #partner-sites {
-
+  * {
+    .box-sizing(border-box);
+  }
 .container {
   position: relative;
   margin-top: 0px;
