--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -467,9 +467,12 @@ h3 {
 // Boxes
 /* The grid: Three equal columns that floats next to each other */
 #partner-sites {
-  * {
-    .box-sizing(border-box);
-  }
+  margin-top: 30px;
+
+* {
+  .box-sizing(border-box);
+}
+
 .container {
   position: relative;
   margin-top: 0px;
