--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -488,8 +488,12 @@ h3 {
     padding: 50px;
     text-align: center;
     font-size: 25px;
+    border-right: 3px solid #fff;
     cursor: pointer;
     color: white;
+    &:last-child{
+      border-right: 0;
+    }
 }
 
 .containerTab {
