--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -491,6 +491,9 @@ h3 {
     border-right: 3px solid #fff;
     cursor: pointer;
     color: white;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     &:last-child{
       border-right: 0;
     }
