--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -499,6 +499,17 @@ h3 {
     }
 }
 
+.partner-site__hed{
+  position: relative;
+  margin: 0;
+}
+
+.partner-site--more-link{
+  position: relative;
+  color: #0db7b8;
+  font-weight: bold;
+}
+
 /* Clear floats after the columns */
 .row:after {
     content: " ";
