--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -466,6 +466,9 @@ h3 {
 }
 // Boxes
 /* The grid: Three equal columns that floats next to each other */
+.partner-sites__hed{
+  margin-top: 30px;
+}
 #partner-sites {
   margin-top: 30px;
 
