--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -476,7 +476,7 @@ h3 {
   .box-sizing(border-box);
 }
 
-.container {
+.partner-site {
   position: relative;
   padding: 20px;
   margin-top: 0px;
