--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -476,7 +476,7 @@ h3 {
   .box-sizing(border-box);
 }
 
-.partner-site {
+.row {
   position: relative;
   padding: 20px;
   margin-top: 0px;
@@ -485,7 +485,7 @@ h3 {
   height: 500px;
 }
 
-.column {
+.partner-site {
     float: left;
     width: 33.33%;
     padding: 50px;
