--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -466,23 +466,23 @@ h3 {
 }
 // Boxes
 /* The grid: Three equal columns that floats next to each other */
-#partner-sites__hed {
+/*#partner-sites__hed {
   margin-top: 30px;
 }
 #partner-sites {
   margin-top: 30px;
 
-* {
+
   .box-sizing(border-box);
 }
-
-.row {
-  position: relative;
-  padding: 20px;
-  margin-top: 0px;
+*/
+.partner-sites {
   width: 100%;
+  padding: 2.375em 2.875em 3.4375em;
+  /*position: relative;
+  margin-top: 0px;
   display: block;
-  height: 500px;
+  height: 500px;*/
 }
 .partner-sites__grid{
   display: block;
