--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -476,6 +476,9 @@ h3 {
   .box-sizing(border-box);
 }
 */
+.row{
+  display:block;
+}
 .partner-sites {
   width: 100%;
   padding: 2.375em 2.875em 3.4375em;
@@ -568,13 +571,6 @@ h3 {
   position: relative;
   color: #0db7b8;
   font-weight: bold;
-}
-
-/* Clear floats after the columns */
-.row:after {
-    content: " ";
-    display: table;
-    clear: both;
 }
 
 
