--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -488,6 +488,7 @@ h3 {
   height: 500px;*/
 }
 .partner-sites__grid{
+  width: 100%
   display: block;
   padding: 2.375em 2.875em 3.4375em;
   padding-bottom: 0;
