--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -476,16 +476,13 @@ h3 {
   .box-sizing(border-box);
 }
 */
-.row{
-  display:block;
-}
 .partner-sites {
   width: 100%;
   padding: 2.375em 2.875em 3.4375em;
-  /*position: relative;
+  position: relative;
   margin-top: 0px;
   display: block;
-  height: 500px;*/
+  height: 500px;
 }
 .partner-sites__grid{
   width: 100%;
