--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -466,9 +466,7 @@ h3 {
 }
 // Boxes
 /* The grid: Three equal columns that floats next to each other */
-/*#partner-sites__hed {
-  margin-top: 30px;
-}
+/*
 #partner-sites {
   margin-top: 30px;
 
@@ -476,6 +474,9 @@ h3 {
   .box-sizing(border-box);
 }
 */
+.partner-sites__hed {
+  margin-top: 30px;
+}
 .partner-sites {
   width: 100%;
   padding: 2.375em 2.875em 3.4375em;
