--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -474,14 +474,23 @@ h3 {
   .box-sizing(border-box);
 }
 */
-.partner-sites__hed {
-  margin-top: 30px;
+.row{
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  clear: both;
 }
 .partner-sites {
   width: 100%;
+  display: block;
   padding: 2.375em 2.875em 3.4375em;
   margin-top: 0px;
 }
+
+.partner-sites__hed {
+  font-size: 2em
+}
+
 .partner-sites__grid{
   width: 100%;
   display: block;
