--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -474,9 +474,7 @@ h3 {
   .box-sizing(border-box);
 }
 */
-.h1{
-  color: #fff;
-}
+
 .partner-sites {
   width: 100%;
   display: block;
@@ -564,6 +562,9 @@ h3 {
   display: inline-block;
   vertical-align: middle;
   padding: 1.25em
+}
+h1{
+  color: #fff;
 }
 .partner-site__hed{
   position: relative;
