--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -525,7 +525,7 @@ h3 {
     right: 0;
     left: 0;
     bottom: 0;
-    display: block;
+    width: 33.33%;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
