--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -505,15 +505,14 @@ h3 {
 }
 
 .partner-site {
-    position: relative;
-    float: left;
-    height: 0;
     width: 33.33%;
-    padding: 50px;
+    position: relative;
+    height: 0;
     text-align: center;
     font-size: 25px;
     border-right: 3px solid #fff;
     cursor: pointer;
+    overflow: hidden;
     color: #fff;
     &:last-child{
       border-right: 0;
