--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -506,10 +506,11 @@ h3 {
 
 .partner-site {
     width: 33.33%;
-    position: relative;
     height: 0;
+    padding-bottom: 33.3333333333%;
+    float: left;
     text-align: center;
-    font-size: 25px;
+    position: relative;
     border-right: 3px solid #fff;
     cursor: pointer;
     overflow: hidden;
