--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -487,7 +487,6 @@ h3 {
 }
 
 .partner-sites__grid{
-  width: 100%;
   display: block;
   padding: 2.375em 2.875em 3.4375em;
   padding-bottom: 0;
@@ -505,7 +504,7 @@ h3 {
 }
 
 .partner-site {
-    width: 33.33%;
+    width: 33.3333333333%;
     height: 0;
     padding-bottom: 33.3333333333%;
     float: left;
