--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -474,9 +474,10 @@ h3 {
   .box-sizing(border-box);
 }
 */
-
-.partner-sites {
+#partner-block{
   width: 100%;
+}
+.partner-sites {
   display: block;
   padding: 2.375em 2.875em 3.4375em;
   margin-top: 0px;
