--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -488,7 +488,7 @@ h3 {
 }
 
 .partner-sites__grid{
-  display: block;
+  display: inline-block;
   padding-bottom: 0;
   padding-top: 0;
   &:before{
