Revert "inline block"
This reverts commit 092f97adb9a8ce902576ac6df158b3034dc5aa47.

--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -488,7 +488,7 @@ h3 {
 }
 
 .partner-sites__grid{
-  display: inline-block;
+  display: block;
   padding-bottom: 0;
   padding-top: 0;
   &:before{
