--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -489,8 +489,8 @@ h3 {
 
 .partner-sites__grid{
   display: block;
-  padding-bottom: 0;
-  padding-top: 0;
+  padding-bottom: 0 !important;
+  padding-top: 0 !important;
   &:before{
     content: " ";
     display: table;
