--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -503,9 +503,9 @@ h3 {
 }
 
 .partner-site {
-    width: 33.3333333333%;
+    width: 33.33%;
     height: 0;
-    padding-bottom: 33.3333333333%;
+    padding-bottom: 33.33%;
     float: left;
     text-align: center;
     position: relative;
