--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -541,32 +541,36 @@ h3 {
         background-color: rgba(35,44,50,0.8);
     }
 }
+
 .partner-site__text-holder{
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  &:before{
+  &:before {
     content: '';
     display: inline-block;
     height: 100%;
     vertical-align: middle;
-    margin-right: 2px;
+    margin-right: -0.3em;
   }
 }
 
 .partner-site__text{
   display: inline-block;
   vertical-align: middle;
-  padding: 1.25em
+  padding: 1.25em;
 }
+
 h1{
   color: #fff;
 }
+
 .partner-site__hed{
   position: relative;
   margin: 0;
+  font-size: 1.5em;
 }
 
 .partner-site--more-link{
