--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -534,6 +534,13 @@ h3 {
     }
 }
 
+.partner-site__img {
+        -ms-behavior: url(/js/backgroundsize.min.htc);
+        &:after {
+            background: transparent url(img/ohs-blue-60.png) repeat;
+        }
+    }
+
 .partner-site__text-holder{
   position: absolute;
   top: 0;
