--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -534,6 +534,17 @@ h3 {
     }
 }
 
+.partner-site {
+        &:hover {
+            .partner-site--more-link {
+                color: #f0d23f;
+            }
+            .partner-site__img {
+                -webkit-transform: scale3d(1.1, 1.1, 1) rotate(0.02deg);
+                transform: scale3d(1.1, 1.1, 1) rotate(0.02deg);
+            }
+        }
+    }
 
 .partner-site__text-holder{
   position: absolute;
