--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -637,7 +637,45 @@ h1{
   #homepage-nav {
   	width: 100%;
   }
+
+  #partner-sites {
+    padding: 0;
+  }
+  #partner-sites__hed {
+    max-width: 320px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  #partner-sites__grid {
+    max-width: 320px;
+    margin: 0 auto;
+  }
+  #partner-site {
+    width: 100%;
+    padding-bottom: 83.3333333333%;
+    border-right: 0;
+    border-bottom: 2px solid #fff;
+    &:last-child {
+        border-bottom: 0;
+    }
+  }
+  #partner-site__text {
+    padding: 3.4375em;
+  }
+  #partner-site__hed {
+    font-size: 1.5em;
+  }
 }
+@media (max-width: 650px) {
+  #partner-sites__grid {
+      padding-left: 0 !important;
+      padding-right: 0 !important;
+  }
+  #partner-site__text {
+      padding: 0.625em;
+  }
+}
+
 
 @media (min-width: 521px) and (max-width: 767px) {
   #homepage-nav {
