--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -647,10 +647,10 @@ h1{
     margin-right: auto;
   }
   #partner-sites__grid {
-    max-width: 520px;
+    max-width: 320px;
     margin: 0 auto;
   }
-  #partner-site {
+  .partner-site {
     width: 100%;
     padding-bottom: 83.3333333333%;
     border-right: 0;
@@ -666,6 +666,7 @@ h1{
       padding-left: 0 !important;
       padding-right: 0 !important;
   }
+
 }
 
 
