--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -638,35 +638,6 @@ h1{
   	width: 100%;
   }
 
-  #partner-sites {
-    padding: 0;
-  }
-  #partner-sites__hed {
-    max-width: 320px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  #partner-sites__grid {
-    max-width: 320px;
-    margin: 0 auto;
-  }
-  .partner-site {
-    width: 100%;
-    padding-bottom: 83.3333333333%;
-    border-right: 0;
-    border-bottom: 2px solid #fff;
-    &:last-child {
-        border-bottom: 0;
-    }
-  }
-}
-
-@media (max-width: 650px) {
-  #partner-sites__grid {
-      padding-left: 0 !important;
-      padding-right: 0 !important;
-  }
-
 }
 
 
@@ -741,6 +712,30 @@ h1{
 	padding: 5px 7px 4px 24px;
   }
 
+  #partner-sites {
+    padding: 0;
+  }
+
+  #partner-sites__hed {
+    max-width: 320px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  #partner-sites__grid {
+    max-width: 320px;
+    margin: 0 auto;
+  }
+
+  #partner-site {
+    width: 100%;
+    padding-bottom: 83%;
+    border-right: 0;
+    border-bottom: 2px solid #fff;
+    &:last-child {
+        border-bottom: 0;
+    }
+  }
 }
 
 @media (min-width: 980px) and (max-width: 1199px) {
