--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -712,22 +712,22 @@ h1{
 	padding: 5px 7px 4px 24px;
   }
 
-  #partner-sites {
+  .partner-sites {
     padding: 0;
   }
 
-  #partner-sites__hed {
+  .partner-sites__hed {
     max-width: 320px;
     margin-left: auto;
     margin-right: auto;
   }
 
-  #partner-sites__grid {
+  .partner-sites__grid {
     max-width: 320px;
     margin: 0 auto;
   }
 
-  #partner-site {
+  .partner-site {
     width: 100%;
     padding-bottom: 83%;
     border-right: 0;
