virtual-exhibit responsive

--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -706,6 +706,11 @@ h1{
   #context-menu a {
   	border: none;
   }
+  #virtual-exhibit{
+    width: 100%;
+    background-position: center;
+
+  }
 
   button.clipboard-wide {
     font-size: 18px;
