--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -707,9 +707,11 @@ h1{
   	border: none;
   }
   #virtual-exhibit{
-    width: 100%;
-    background-position: center;
 
+    div {
+      width: 100%;
+      background-position: center;
+    }
   }
 
   button.clipboard-wide {
