--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -707,13 +707,24 @@ h1{
   	border: none;
   }
   #virtual-exhibit{
-
     div {
       width: 100%;
-      background-position: center;
+      background-position: right;
     }
   }
 
+#slide1 {
+  background-position: center;
+}
+#slide2 {
+  background-position: left;
+}
+#slide3 {
+  background-position: center;
+}
+#slide4 {
+  background-position: left;
+}
   button.clipboard-wide {
     font-size: 18px;
 	padding: 5px 7px 4px 24px;
