fix hover slideshow heading

--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -374,12 +374,17 @@ h3 {
     line-height: 18px;
 	margin-bottom: 4px;
     color: @white;
-	&:hover {
-	  color: rgb(3,181,181);
-	  text-decoration: underline;
+
+  }
+  a {
+    .title {
+      &:hover {
+      color: rgb(3,181,181);
+      text-decoration: underline;
+      }
     }
   }
-
+  
   .small {
     display: block;
     font-size: 14px;
