--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -374,13 +374,13 @@ h3 {
     line-height: 18px;
 	margin-bottom: 4px;
     color: @white;
-
   }
+
   a {
     &:hover {
       .title {
       color: rgb(3,181,181);
-      text-decoration: underline;
+      text-decoration: none;
       }
     }
   }
