--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -287,7 +287,7 @@
   }
 
   a:hover div:after {
-    content: "›";
+    content: "›"; // "»";
     position: absolute;
     font-size: 128px;
     bottom: 50px;
@@ -374,9 +374,14 @@ h3 {
     line-height: 18px;
 	margin-bottom: 4px;
     color: @white;
-	&:hover {
-	  color: rgb(3,181,181);
-	  text-decoration: underline;
+  }
+
+  a {
+    &:hover {
+      .title {
+      color: rgb(3,181,181);
+      text-decoration: none;
+      }
     }
   }
 
@@ -406,7 +411,6 @@ h3 {
 }
 
 /* Position the "next button" to the right */
-
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
@@ -466,112 +470,181 @@ h3 {
 }
 }
 
-//partner-sites
-
+// Boxes
+#partner-block{
+  width: 100%;
+  margin-left: 0;
+}
 .partner-sites {
-	width: 100%;
-	padding: 5px 4px 5px;
-	padding-bottom: 0;
+  display: block;
+  padding-bottom: 0;
 }
 
-.partner-sites__grid {
-	display: block;
-	padding: 4px 5px 4px;
-	padding-bottom: 0;
-	padding-top: 0;
+.partner-sites__hed {
+  font-size: 2em
 }
-	&:before {
-		content: " ";
-    display: table-row;
-	}
-	&:after {
-		content: " ";
-		display: table-row;
-		clear: both;
-	}
 
-.partner-site, .partner-site, .partner-site {
-  border-right: 0;
+.partner-sites__grid{
+  display: block;
+  padding-bottom: 0 !important;
+  padding-top: 0 !important;
+  &:before{
+    content: " ";
+    display: table;
+  }
+  &:after {
+    content: " ";
+    display: table;
+    clear: both;
+  }
 }
 
 .partner-site {
-	width: 33.3333333333%;
-	height: 0;
-	padding-bottom: 33.3333333333%;
-	float: left;
-	text-align: center;
-	position: relative;
-	color: #fff;
-	overflow: hidden;
-	border-right: 3px solid #fff;
+    width: 33%;
+    height: 0;
+    padding-bottom: 33%;
+    float: left;
+    text-align: center;
+    position: relative;
+    border-right: 3px solid #fff;
+    cursor: pointer;
+    overflow: hidden;
+    color: #fff;
+    &:last-child{
+      border-right: 0;
+    }
 }
-	&:last-child {
-		border-right: 0;
-	}
-
 .partner-site__img {
-	position: absolute;
-	top: 0;
-	right: 0;
-	left: 0;
-	bottom: 0;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
-	-webkit-transform: scale3d(1, 1, 1) rotate(0);
-	transform: scale3d(1, 1, 1) rotate(0);
-	-webkit-transition: all 200ms ease-in-out;
-	transition: all 200ms ease-in-out;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    -webkit-transform: scale3d(1, 1, 1) rotate(0);
+    transform: scale3d(1, 1, 1) rotate(0);
+    -webkit-transition: all 200ms ease-in-out;
+    transition: all 200ms ease-in-out;
+    &:after {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        background-color: rgba(35,44,50,0.6);
+    }
 }
-	&:after {
-		content: '';
-		display: block;
-		position: absolute;
-		top: 0;
-		right: 0;
-		left: 0;
-		bottom: 0;
-		background-color: rgba(35,44,50,0.8);
-	}
 
-.partner-site__text-holder {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-}
-	&:before {
-		content: '';
-		display: inline-block;
-		height: 100%;
-		vertical-align: middle;
-		margin-right: 1px;
-	}
+.partner-site {
+        &:hover {
+            .partner-site--more-link {
+                color: #f0d23f;
+            }
+            .partner-site__img {
+                -webkit-transform: scale3d(1.1, 1.1, 1) rotate(0.02deg);
+                transform: scale3d(1.1, 1.1, 1) rotate(0.02deg);
+            }
+        }
+    }
 
-.partner-site__text {
-	display: inline-block;
-	vertical-align: middle;
-	padding: 12pt;
+.partner-site__text-holder{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  &:before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+    margin-right: -0.3em;
+  }
 }
-.partner-site__hed {
-	position: relative;
-	margin: 0;
-	font-size: 14pt;
+
+.partner-site__text{
+  display: inline-block;
+  vertical-align: middle;
+  padding: 1.25em;
 }
-.partner-site--more-link {
-	position: relative;
-	color: #0db7b8;
+
+h1{
+  color: #fff;
+}
+
+.partner-site__hed{
+  position: relative;
+  margin: 0;
+  font-size: 1.5em;
+}
+
+.partner-site--more-link{
+  position: relative;
+  color: #0db7b8;
+  font-weight: bold;
+}
+
+
+// NewestAdditions
+
+#newest-additions {
+
+  color: @white;
+  padding: 3px 14px 8px 14px;
+  background-color: rgb(0,45,70);
+
+  h2 {
+
+	color: @white;
+	padding: 8px 8px 8px 8px;
+    margin: 0;
 	font-weight: bold;
+    background-color: rgb(0,45,70);
+
+  }
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0px 0;
+  }
+
+  li {
+    position: relative;
+    padding: 0;
+    margin: 0;
+  }
+
+  a {
+    color: @white;
+    display: block;
+    padding: 3px 8px 3px 8px;
+	border-bottom: 1px solid @white;
+    .text-overflow();
+    &:hover {
+      background-color: rgb(48,71,89);
+	  color: rgb(3,181,181);
+    }
+  }
+
 }
+
+
 
 // Responsive design
+
 
 @media (max-width: 520px) {
   #homepage-nav {
   	width: 100%;
   }
+
 }
+
 
 @media (min-width: 521px) and (max-width: 767px) {
   #homepage-nav {
@@ -638,13 +711,55 @@ h3 {
   #context-menu a {
   	border: none;
   }
+  #virtual-exhibit{
+    div {
+      width: 100%;
+      background-position: right;
+    }
+  }
+
+  #slide1 {
+    background-position: center;
+  }
+  #slide2 {
+    background-position: left;
+  }
+  #slide3 {
+    background-position: center;
+  }
+  #slide4 {
+    background-position: left;
+  }
 
   button.clipboard-wide {
     font-size: 18px;
 	padding: 5px 7px 4px 24px;
   }
 
+  .partner-sites {
+    padding: 0;
+  }
 
+  .partner-sites__hed {
+    max-width: 320px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .partner-sites__grid {
+    max-width: 320px;
+    margin: 0 auto;
+  }
+
+  .partner-site {
+    width: 100%;
+    padding-bottom: 83%;
+    border-right: 0;
+    border-bottom: 2px solid #fff;
+    &:last-child {
+        border-bottom: 0;
+    }
+  }
 }
 
 @media (min-width: 980px) and (max-width: 1199px) {
