--- a/css/less/main.less
+++ b/css/less/main.less
@@ -19,6 +19,7 @@
 
 body {
   background-color: @white;
+  overflow-x: hidden;
 }
 
 #wrapper {
@@ -48,7 +49,7 @@ h2 {
   -webkit-font-feature-settings: "lnum";
   font-feature-settings: "lnum";
 }
-h3, 
+h3,
 h4 {
   	font-family: @sansFontFamily;
   	font-weight: bold;
@@ -115,23 +116,23 @@ h6 {
   p {
   	margin: 10px 0 10px 0;
   }
-  
+
 	section h2:last-child {
 	  font-size: 16px;
 	  border-top: 1px solid #f2f2f2;
 	  border-bottom: 1px solid #f2f2f2;
 	  margin: 0;
-	  padding: 10px 10px;	
+	  padding: 10px 10px;
 	}
- 
+
  ul {
- 	margin: 10px 0 10px 0;	
+ 	margin: 10px 0 10px 0;
  	}
-  
+
  .field {
     margin-right: 8px;
-	} 
-  
+	}
+
 }
 
 h1 { font-size: 24px; }
@@ -191,7 +192,7 @@ th {
 
 .sidebar-lowering {
   padding-top: 60px;
-  
+
   h2 {
 	font-size: 20px;
 	}
@@ -226,7 +227,7 @@ th {
   font-size: 16px;
   border-bottom: 1px solid #f2f2f2;
   margin: 0;
-  padding: 10px 10px;	
+  padding: 10px 10px;
 }
 
 
@@ -248,7 +249,7 @@ th {
   border-top: 1px solid #f2f2f2;
   border-bottom: 1px solid #f2f2f2;
   margin: 0;
-  padding: 10px 10px;	
+  padding: 10px 10px;
 }
 
 // .digitalObjectMetadata {
@@ -382,7 +383,7 @@ h1, h2, h3, h4, h5, h6,
   	font-family: @sansFontFamily;
 	margin-top: 1em;
   }
-  
+
   // Content of .facet-header for desktops
   h3 {
     font-family: @sansBoldFontFamily;
@@ -398,29 +399,29 @@ h1, h2, h3, h4, h5, h6,
     margin-bottom: 0;
 	margin-top: 0;
   }
-  
+
   li {
     padding: 2px 32px 2px 4px;
     .text-overflow();
     position: relative;
 	line-height: 20px;
 	font-size: 14px;
-	
+
 	a {
     text-decoration: none;
 	}
-	
+
 	a:hover {
 	color: #0db7b8;
 	text-decoration: underline;
 	}
-	
+
 	.active {
 		a {
 		text-decoration: none;
 		}
 	}
-  }	
+  }
 }
 
 // h1,
@@ -469,13 +470,13 @@ h1 .count {
   position: relative;
   background-color: @grayLight;
   color: @white;
-  
+
   font-family: @sansBoldFontFamily;
   font-weight: 900;
   letter-spacing: 0.1em;
   text-transform: uppercase;
   line-height: 1.3;
-  
+
 }
 
 #treeview {
@@ -700,12 +701,12 @@ body.login #content {
     transition: all 200ms ease-in-out;
 	// position: absolute;
     bottom: 2.5em;
-	
-	a:hover { 
+
+	a:hover {
 		background-color:#0db7b8;
 		.lt-ie9 & { background:transparent; }
 		.icon-chevron-right-large { color:#d7dfdf; }
-		}		
+		}
 }
 
 .module__hed-link {
@@ -754,7 +755,7 @@ form .field {
     padding: 0 !important;
     color: @grayLight;
   }
-}  
+}
 
 select {
     margin: 0;
@@ -779,22 +780,22 @@ select {
   padding: 0px 10px 10px 10px;
   border-bottom: 1px solid @grayLighter;
   .clearfix();
-  
+
   a {
     text-decoration: none;
 	}
-	
+
   a:hover {
   	color:#721f13;
   	text-decoration: underline;
 	}
-	
-	
+
+
   .result-details {
   	li.reference-code {
     	color: #333;
 	}
-  }	
+  }
 }
 
 
