--- a/css/less/homepage.less
+++ b/css/less/homepage.less
@@ -354,6 +354,15 @@
     display: block;
     height: 500px;
 }
+#slide5 {
+    background-image: url("/plugins/arArchivesOrPlugin/images/slide5.jpg");
+    background-repeat: no-repeat;
+    background-position: 0 50%;
+    background-size: cover;
+    width: 100%;
+    display: block;
+    height: 500px;
+}
 h3 {
     position: absolute;
     top: -10px;
@@ -729,6 +738,9 @@ h1{
   }
   #slide4 {
     background-position: left;
+  }
+  #slide5 {
+    background-position: center;
   }
 
   button.clipboard-wide {
